视频播放页面修改

--- a/styles/video.css
+++ b/styles/video.css
@@ -12,3 +12,32 @@ html,body{
     position: absolute !important;
     z-index: 1;
 }
+.video-footer-return {
+	position: absolute;
+    height: 15%;
+	right: 0;
+	bottom: 0;
+	z-index: 2;
+    margin-right: 5%;
+    display: flex;
+    align-items: center;
+}
+
+.video-footer-return img{
+    align-items: center;
+    height: 70%;
+}
+
+.list-header{
+	z-index: 2;
+	position: absolute;
+    width: 100%;
+    height: 15%;
+    background-size:100%;
+}
+.list-header-inner{
+    width: 100%;
+    height: 100%;
+    background: url(../images/list/header.png) no-repeat;
+    background-size:100%;
+}
