--- a/styles/company.css
+++ b/styles/company.css
@@ -5,10 +5,14 @@
     background-size: 100% 100%;
     float: left;
 }
-.company-left-image{
-	width: 30%;
+.company-right{
+	width: 70%;
 	height: 100%;
-    background: url(../images/company/left.png) no-repeat;
-    background-size: 100% 100%;
     float: left;
+    padding: 10px 50px;
+}
+.company-right-content {
+	margin-top: 50px;
+	line-height: 38px;
+    font-size: 15px;
 }
