--- a/styles/pdf.css
+++ b/styles/pdf.css
@@ -1,4 +1,39 @@
 html,body{
     height: 100%; padding: 0; margin: 0;
     width: 100%;
+    margin: 0;
+}
+#my-iframe {
+    height: 100%; padding: 0; margin: 0;
+    border: none;
+    display: block;
+}
+.video-footer-return {
+	position: absolute;
+    height: 15%;
+	right: 0;
+	bottom: 0;
+	z-index: 2;
+    margin-right: 5%;
+    display: flex;
+    align-items: center;
+}
+
+.video-footer-return img{
+    align-items: center;
+    height: 70%;
+}
+
+.list-header{
+	z-index: 2;
+	position: absolute;
+    width: 100%;
+    height: 15%;
+    background-size:100%;
+}
+.list-header-inner{
+    width: 100%;
+    height: 100%;
+    background: url(../images/list/header.png) no-repeat;
+    background-size:100%;
 }
